# smart-ai-bridge

./: .dockerignore  .env  .env.development  .env.example  .env.port-8001-production  .env.production  .env.qwen25-coder-7b-8001  .gitignore  .gitignore.public  .mcp.json.example  API-DOCUMENTATION-v8.1.0.md  API-KEYS.md  API-KEYS.template.md  ATOMIC-TASK-1-COMPLETION-REPORT.md  ATOMIC-TASK-2-COMPLETED.md  ATOMIC-TASK-3-COMPLETION.md  ATOMIC-TASK-4-FINAL-REPORT.md  ATOMIC-TASK-6-DEPLOYMENT-GUIDE.md  BRANCHES.md  CHANGELOG-v1.1.0.md  CHANGELOG-v1.2.0.md  CHANGELOG-v1.2.1.md  CHANGELOG-v1.2.2.md  CHANGELOG.md  CLAUDE-DESKTOP-INTEGRATION-TEST-REPORT.md  CLAUDE-DESKTOP-JSON-FIX-REPORT.md  COMMIT_MESSAGE_INITIAL.txt  COMPLETE-CLAUDE-DESKTOP-DEPLOYMENT-GUIDE.md  COMPREHENSIVE-QUALITY-VALIDATION-REPORT.json  CONFIGURATION-PARITY-VERIFICATION-REPORT.md  CONFIGURATION.md  CONSOLIDATION-REPORT.md  CONTRIBUTING.md  Cargo.toml  Claude.md  DEEPSEEK-USAGE-GUIDELINES.md  DEPLOYMENT-COMPLETE-32K-STANDARD.md  DEPLOYMENT-STATUS-v6.2.0.md  DEPLOYMENT-STATUS-v7.0.0.md  DEPLOYMENT_SUMMARY.md  (+220 more)
.serena/: project.yml
archive/: server-backup-20250822_123009.js  server-backup.js  server-compliant.js  server-consolidated-v7.js  server-dynamic-ip-backup.js  server-empirical.js  server-enhanced-chunking.js  server-enhanced-routing.js  server-enhanced.js  server-static-ip-backup.js  server-v3.0.0-backup.js  server-v4.2.0-backup-20250825.js  server-v6.1.0-file-enhanced.js
archived-misleading-results/: EVIDENCE-OF-FALSE-POSITIVES.md  HISTORICAL-CONTEXT-131K-FAILURE.md  README.md  TEST-CONTRADICTIONS-ANALYSIS.md  mkg-local-container-test-results-1758259915010.json
backends/: backend-adapter.js  backend-registry.js  deepseek-adapter.js  gemini-adapter.js  local-adapter.js  qwen-adapter.js
config-templates/: claude-desktop-config.json.template  docker-compose.yml.template  (+1 more)
src/: audit.rs  (+39 more)
(+253 files in other folders)
